--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Classic Asteroids. Tom Wellborn, 2025</title>
+    <meta property="og:title" content="Asteroids (Alpha, 2025)">
+    <meta property="og:description" content="A modern rework of the classic Space Invaders. Navigate your ship, dodge and shoot asteroids.">
+    <meta property="og:image" content="preview.png">
+    <meta property="og:url" content="https://tommiew007.github.io/Asteroids/>
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Asteroids (Alpha, 2025)">
+    <meta name="twitter:description" content="A reimagined classic in alpha. Play now!">
+    <meta name="twitter:image" content="preview.png">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asteroids Game</title>
     <style>
@@ -20,5 +31,6 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <script src="script.js"></script>
+	
 </body>
 </html>
