--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Asteroids (Alpha, 2025)">
     <meta property="og:description" content="A modern rework of the classic Space Invaders. Navigate your ship, dodge and shoot asteroids.">
     <meta property="og:image" content="preview.png">
-    <meta property="og:url" content="https://tommiew007.github.io/Asteroids/>
+    <meta property="og:url" content="https://tommiew007.github.io/Asteroids/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Asteroids (Alpha, 2025)">
